package com.example.quizle.network

class MessageSerializer {
    fun toJson(obj: Any): String {
        TODO("Not yet implemented — use Gson or kotlinx.serialization")
    }

    fun <T> fromJson(json: String, cls: Class<T>): T {
        TODO("Not yet implemented — use Gson or kotlinx.serialization")
    }
}
